--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,11 @@
                                     <label for="password" class="sr-only">Password</label>
                                     <input type="password" name="password" id="password" class="form-control" placeholder="Password を入力して下さい"/>
                                 </div>
-                                <br/>
+                                <div class="form-group text-center">
+                                    <div class="checkbox">
+                                        <label><input type="checkbox" name="remember-me" id="remember-me" value="true"/>次回から自動的にログインする</label>
+                                    </div>
+                                </div>
                                 <button id="btn-login" class="btn btn-primary btn-block">ログイン</button>
                             </form>
                         </div>
