#29 貸出希望書籍 CSV ファイルアップロード画面を作成しました。

--- a/src/main/resources/templates/common/head-cssjs.html
+++ b/src/main/resources/templates/common/head-cssjs.html
@@ -16,3 +16,33 @@
         <script src="/js/html5shiv.min.js"></script>
         <script src="/js/respond.min.js"></script>
     <![endif]-->
+
+    <style type="text/css">
+        <!--
+        .jp-gothic {
+            font-family: Verdana, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+        }
+        .content-wrapper {
+            background-color: #fffafa;
+        }
+        .noselected-library {
+            color: #ff8679 !important;
+            font-size: 100%;
+            font-weight: 700;
+        }
+        .selected-library {
+            color: #ffffff !important;
+            font-size: 100%;
+            font-weight: 700;
+        }
+        .table>tbody>tr>td
+        , .table>tbody>tr>th
+        , .table>tfoot>tr>td
+        , .table>tfoot>tr>th
+        , .table>thead>tr>td
+        , .table>thead>tr>th {
+            padding: 5px;
+            font-size: 90%;
+        }
+        -->
+    </style>
