--- a/src/main/resources/templates/lendingapp/lendingapp.html
+++ b/src/main/resources/templates/lendingapp/lendingapp.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>貸出申請</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-    <!-- Bootstrap 3.3.4 -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <!-- Font Awesome Icons -->
-    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-    <!-- Ionicons -->
-    <link href="/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
-    <!-- Theme style -->
-    <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
-    <link href="/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="/js/html5shiv.min.js"></script>
-    <script src="/js/respond.min.js"></script>
-    <![endif]-->
+    <link th:replace="common/head-cssjs"/>
 
     <style>
         .content-wrapper {
@@ -56,47 +40,8 @@
 <body class="skin-blue layout-top-nav">
 <div class="wrapper">
 
-    <header class="main-header">
-        <nav class="navbar navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <a href="#" class="navbar-brand"><b>ksbysample-lending</b></a>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">メニュー <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-
-                <!-- Navbar Right Menu -->
-                <div class="navbar-custom-menu">
-                    <p class="navbar-text selected-library">選択中：テスト図書館</p>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">ログアウト</a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-custom-menu -->
-            </div>
-            <!-- /.container-fluid -->
-        </nav>
-    </header>
+    <!-- Main Header -->
+    <div th:replace="common/mainparts :: main-header"></div>
 
     <!-- Full Width Column -->
     <div class="content-wrapper">
@@ -130,7 +75,7 @@
                                 </div>
                                 <br/>
 
-                                <form id="lendingappForm" method="post" action="">
+                                <form id="lendingappForm" method="post" action="/lendingapp/apply" th:action="@{/lendingapp/apply}" th:object="${lendingappForm}">
                                     <table class="table table-hover">
                                         <colgroup>
                                             <col width="5%"/>
@@ -193,8 +138,8 @@
                                         </tr>
                                         </tbody>
                                         <div class="text-center">
-                                            <button class="btn bg-blue"><i class="fa fa-thumbs-up"></i>　申請</button>
-                                            <button class="btn bg-orange"><i class="fa fa-tag"></i>　一時保存（まだ申請しない）</button>
+                                            <button class="btn bg-blue js-btn-apply"><i class="fa fa-thumbs-up"></i>　申請</button>
+                                            <button class="btn bg-orange js-btn-temporarySave"><i class="fa fa-tag"></i>　一時保存（まだ申請しない）</button>
                                         </div>
                                     </table>
                                 </form>
@@ -211,11 +156,22 @@
 </div>
 <!-- ./wrapper -->
 
-<!-- jQuery 2.1.4 -->
-<script src="/js/jQuery-2.1.4.min.js" type="text/javascript"></script>
-<!-- Bootstrap 3.3.2 JS -->
-<script src="/js/bootstrap.min.js" type="text/javascript"></script>
-<!-- AdminLTE App -->
-<script src="/js/app.min.js" type="text/javascript"></script>
+<script th:replace="common/bottom-js"></script>
+<script type="text/javascript">
+    <!--
+    $(document).ready(function() {
+        $(".js-btn-apply").click(function(){
+            $("#lendingappForm").submit();
+            return false;
+        });
+
+        $(".js-btn-temporarySave").click(function(){
+            $("#lendingappForm").attr("action", "/lendingapp/temporarySave");
+            $("#lendingappForm").submit();
+            return false;
+        });
+    });
+    -->
+</script>
 </body>
 </html>
