--- a/src/main/resources/templates/lendingapp/lendingapp.html
+++ b/src/main/resources/templates/lendingapp/lendingapp.html
@@ -59,8 +59,12 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <form id="lendingappForm" method="post" action="/lendingapp/apply" th:action="@{/lendingapp/apply}" th:object="${lendingappForm}">
-                            <div class="callout callout-danger" th:if="${#fields.hasGlobalErrors()}">
+                            <div class="alert alert-danger" th:if="${#fields.hasGlobalErrors()}">
                                 <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">共通エラーメッセージ表示エリア</p>
+                            </div>
+                            <div class="alert alert-success" th:if="${successMessages}">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                <p th:each="msg : ${successMessages}" th:text="${msg}">通常メッセージ表示エリア</p>
                             </div>
                             <div class="box">
                                 <div class="box-body no-padding">
@@ -141,6 +145,7 @@
                                     <div class="text-center" th:if="*{lendingApp.status} == ${@vh.getValue('LendingAppStatusValues', 'UNAPPLIED')}">
                                         <button class="btn bg-blue js-btn-apply"><i class="fa fa-thumbs-up"></i>　申請</button>
                                         <button class="btn bg-orange js-btn-temporarySave"><i class="fa fa-tag"></i>　一時保存（まだ申請しない）</button>
+                                        <input type="hidden" th:field="*{btn}"/>
                                     </div>
                                 </div>
                             </div>
@@ -161,11 +166,13 @@
     <!--
     $(document).ready(function() {
         $(".js-btn-apply").click(function(){
+            $("#btn").val("apply");
             $("#lendingappForm").submit();
             return false;
         });
 
         $(".js-btn-temporarySave").click(function(){
+            $("#btn").val("temporarySave");
             $("#lendingappForm").attr("action", "/lendingapp/temporarySave");
             $("#lendingappForm").submit();
             return false;
