楽観的排他制御で、他のブラウザから既にデータが更新されていた場合に更新させないようにする処理を実装しました。

--- a/src/main/resources/templates/lendingapp/lendingapp.html
+++ b/src/main/resources/templates/lendingapp/lendingapp.html
@@ -85,6 +85,7 @@
                                         </table>
                                         <input type="hidden" th:field="*{lendingApp.lendingAppId}"/>
                                         <input type="hidden" th:field="*{lendingApp.status}"/>
+                                        <input type="hidden" th:field="*{lendingApp.version}"/>
                                     </div>
                                     <br/>
     
@@ -139,6 +140,7 @@
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].isbn}"/>
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].bookName}"/>
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].lendingState}"/>
+                                            <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].version}"/>
                                         </tr>
                                         </tbody>
                                     </table>
