#53 貸出申請画面の Controller クラスを作成しました。

--- a/src/main/resources/templates/lendingapproval/lendingapproval.html
+++ b/src/main/resources/templates/lendingapproval/lendingapproval.html
@@ -176,7 +176,7 @@
     <!--
     $(document).ready(function() {
         $(".js-btn-complete").click(function(){
-            $("#lendingappForm").submit();
+            $("#lendingapprovalForm").submit();
             return false;
         });
     });
